--- a/EasyLite-annotation/build.gradle
+++ b/EasyLite-annotation/build.gradle
@@ -1,17 +1,11 @@
-apply plugin: 'com.android.library'
+apply plugin: 'java-library'
 apply plugin: 'com.github.dcendents.android-maven'
 group='com.github.kejunyao'
 
-android {
-    compileSdkVersion 29
-    defaultConfig {
-        minSdkVersion 15
-        versionCode 1
-        versionName "1.0"
-        consumerProguardFiles 'consumer-rules.pro'
-    }
-}
-
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
 }
+
+sourceCompatibility = JavaVersion.VERSION_1_7
+targetCompatibility = JavaVersion.VERSION_1_7
